# notion-cli

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.omc/: prd.json  progress.txt
.omc/plans/: notion-cli-mvp.md
docs/: ai-usage.md
docs/examples/: claude-code.md
src/notion_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  credentials.py  errors.py  logging.py  output.py
src/notion_cli/commands/: auth.py  card.py  comments.py  database.py  init.py  logout.py  search.py
src/notion_cli/notion/: coercion.py  markdown.py  schema.py
tests/: conftest.py
tests/unit/: test_auth.py  test_card_archive.py  test_card_blocks.py  test_card_create.py  test_card_get.py  test_card_list.py  test_card_update.py  test_cli.py  test_client.py  test_coercion.py  test_comments.py  test_config.py  test_credentials.py  test_database_aliases.py  test_errors.py  test_init.py  test_logging.py  test_logout.py  test_markdown.py  test_output.py  test_schema_cache.py  test_search.py
